--- a/cypress/e2e/ato-run-tests.yml
+++ b/cypress/e2e/ato-run-tests.yml
@@ -7,9 +7,9 @@ jobs:
         runs-on: ubuntu-22.04
         steps:
             - name: Checkout
-              uses: actions/checkout@master
+              uses: actions/checkout@v5
             - name: Cypress run
-              uses: cypress-io/github-action@master
+              uses: cypress-io/github-action@v5
               with:
                   build: npm run build
                   start: npm start
