--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
               uses: cypress-io/github-action@v3
               with:
                   build: npm run build
-                  start: npm start
+                  start: npx cypress open
