--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v2
             - name: Cypress run
-              uses: cypress-io/github-action@v3
+              uses: cypress-io/github-action@v
               with:
                   build: npm run build:testing
                   start: npm run start
