--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2
             - name: Cypress run
-              uses: cypress-io/github-action@v
+              uses: cypress-io/github-action@v2
               with:
-                  start: npm run start
+                  build: npm run build:testing
+                  start: npm start
