--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "devDependencies": {
-    "cypress": "^12.9.0"
-  }
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"devDependencies": {
+		"cypress": "^12.9.0"
+	}
 }
