--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Cypress Tests
 
-on: push
+on: [push]
 
 jobs:
     cypress-run:
@@ -11,5 +11,5 @@ jobs:
             - name: Cypress run
               uses: cypress-io/github-action@v2
               with:
-                  build: npm run build
                   start: npm start
+                  browser: chrome
