--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ jobs:
     cypress-run:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout
+            - name: Checkout code
               uses: actions/checkout@v2
             - name: Cypress run
               uses: cypress-io/github-action@v2
               with:
-                  start: npm start
+                  command: npx cypress run
                   browser: chrome
