--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,11 @@
-name: Cypress Tests
-
-on: [push]
-
+name: Add Action
+on:
+    push:
+        branches:
+            - master
 jobs:
-    cypress-run:
+    Cypress-Test:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout code
+            - name: Checkout GitCode
               uses: actions/checkout@v2
-            - name: Cypress run
-              uses: cypress-io/github-action@v2
-              with:
-                  command: npx cypress run
-                  browser: chrome
