--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,15 @@
-name: Add Action
-on:
-    push:
-        branches:
-            - master
+name: Cypress Tests
+
+on: [push]
+
 jobs:
-    Cypress-Test:
+    cypress-run:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout GitCode
+            - name: Checkout code
               uses: actions/checkout@v2
+            - name: Cypress run
+              uses: cypress-io/github-action@v2
+              with:
+                  command: npx cypress run
+                  browser: chrome
